# Autarky

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindIrrXML.cmake  Findassimp.cmake  Findglfw3.cmake
resources/shaders/: default.frag  default.vert
src/: main.cpp
src/entities/: Cube.cpp  Cube.h  Entity.h
src/graphics/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
